@@ -139,6 +139,10 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
     + Export and pass down LIBDIR.
     + Fix standalone make call by specifying PREFIX, NXLIBDIR and LIBDIR
       explicitly.
+    + Fix quoting. Since make does not interpret single or double quotes, each
+      string should only be quoted once (so that the shell can parse the
+      quoted result). Quote the values in the variable directly and try not to
+      "double-quote" the resulting string.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.0.4):
